Almost done with HMTL

--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
           rel="stylesheet">
   </head>
   <body>
+    <div class="header">
+      <img src="./resources/images/logo.png">
+      <p>Secret Agent Supply Inc.</p>
+    </div>
 
+    <div id="banner">
+      <img src="./resources/images/moto.jpg">
+      <p class="pull-quote">
+        <h3>New Arrival</h3>
+      </p>
+      <p class="pull-quote">
+        <h1>Sport Bikes and Motorcycles</h1>
+      </p>
+    </div>
+
+    <div class="nav">
+      <ul>
+        <li>Eyewear</li>
+        <li>Apparel</li>
+        <li>Gadgets</li>
+        <li>Vehicles</li>
+        <li>Classes</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
+
+    <div class="footer">
+      <p>Copyright Secret Agent Supply Inc.</p>
   </body>
 </html>
